# wasm_game_of_life

./: .gitignore  Cargo.toml  changelog.md  index.html  jsconfig.json  package-lock.json  package.json  readme.md  webpack.config.js
js/: index.js  run.js
src/: lib.rs  main.mjs
static/: index.html
tests/: web.rs
