[package]
name = 'hello_world'
version = '0.1.0'
authors = ['The wasm-bindgen Developers']
edition = '2018'

[lib]
crate-type = [
    'cdylib',
    'rlib',
]

[features]
default = ['console_error_panic_hook']

[dependencies]
wasm-bindgen = '0.2.56'
js-sys = '0.3.33'

[dependencies.web-sys]
version = '0.3.33'
features = ['console']
[target."cfg(debug_assertions)".dependencies.console_error_panic_hook]
version = '0.1.6'
optional = true
