[package]
name = 'wasm_game_of_life'
version = '0.1.1'
authors = ['The wasm-bindgen Developers']
edition = '2018'

[lib]
crate-type = [
    'cdylib',
    'rlib',
]
[profile.release]
lto = true

[features]
debug_assertions = ['console_error_panic_hook']

[dependencies]
wasm-bindgen = '0.2.60'
js-sys = '0.3.37'
fixedbitset = '0.2.0'

[dependencies.console_error_panic_hook]
version = '0.1.6'
optional = true

[dependencies.wee_alloc]
version = '0.4.5'
optional = true

[dependencies.web-sys]
version = '0.3.37'
features = ['console']

[dev-dependencies]
wasm-bindgen-test = '0.3.10'
futures = '0.3.4'
js-sys = '0.3.37'
wasm-bindgen-futures = '0.4.10'
